[project]
name = "vsix-downloader"
version = "0.1.0"
readme = "README.md"
description = "VSIX downloader"
requires-python = ">=3.10"
dependencies = [
    "aiofile>=3.9.0",
    "aioshutil>=1.5",
    "dataclasses-json>=0.6.7",
    "httpx>=0.28.1",
    "pytz>=2025.2",
    "semantic-version>=2.10.0",
    "tqdm>=4.67.1",
]

[tool.uv]
package = false
