[project]
name = "dev-ext-downloader"
version = "0.1.0"
readme = "README.md"
description = "Jetbrains and VSCode extensions downloader"
requires-python = ">=3.10"
dependencies = [
    "aiofile>=3.9.0",
    "aioshutil>=1.5",
    "dataclasses-json>=0.6.7",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.0",
    "pytz>=2025.2",
    "semantic-version>=2.10.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "types-lxml>=2025.3.30",
]
